fix: attempt to fix GameRecordView mobile width overflow

--- a/src/Components/layout/TopNavbar.module.css
+++ b/src/Components/layout/TopNavbar.module.css
@@ -26,6 +26,10 @@
   gap: 0.5rem;
 }
 
+.logout:hover {
+  cursor: pointer;
+}
+
 .link {
   color: var(--color-white);
   text-decoration-line: none;
