--- a/src/layouts/MyRecordLayout.module.css
+++ b/src/layouts/MyRecordLayout.module.css
@@ -26,6 +26,7 @@
 
   .content {
     width: 100%;
+    flex-shrink: 1;
   }
 
   .myRecord {
